--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Blog</h1>
-        <h2>This is my blog</h2>
+        <h2>一切从耍流氓开始</h2>
         <a href="https://github.com/xudengke/blog" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
